--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^4.8.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^6.5.0",
+    "morgan": "~1.9.1",
+    "validator": "^13.7.0"
   }
 }
